# learnopengl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  clangformat_all.py  compile.bat  compile_commands.json  glsl_2_header.py  make.bat  notes.md
0.hello_opengl/: CMakeLists.txt
0.window/: main.cpp
1.triangle/: main.cpp
2.colorfull_triangle/: CMakeLists.txt  fs.glsl  fs.glsl.h  main.cpp  vs.glsl
3.rectangle/: fs.glsl  main.cpp  vs.glsl
4.shaders/: main.cpp  vs.glsl.h
5.shader class/: main.cpp
5.shader_class/: main.cpp
5.shader_from_scratch/: main.cpp
6.textures/: main.cpp  textures_fs.glsl.h  textures_vs.glsl
7.coordinates/: coordinates_fs.glsl.h  coordinates_vs.glsl.h  main.cpp
7.transformation/: main.cpp
8.coordinates/: main.cpp
basic_lighting/: CMakeLists.txt  basic_lighting_fs.glsl  basic_lighting_fs.glsl.h  basic_lighting_light_fs.glsl  basic_lighting_light_fs.glsl.h  basic_lighting_light_vs.glsl.h  basic_lighting_vs.glsl  basic_lighting_vs.glsl.h  main.cpp
camera/: CMakeLists.txt  camera_fs.glsl  camera_fs.glsl.h  camera_vs.glsl.h  main.cpp
color/: CMakeLists.txt  color_fs.glsl  color_fs.glsl.h  color_vs.glsl.h  light_fs.glsl.h  light_vs.glsl  light_vs.glsl.h  main.cpp
common/: CMakeLists.txt  camera.h  color.h  common_headers.h  define.h  glfw_guard.cpp  glfw_guard.h  glfw_guard_test.cxx  glfw_helpper.cpp  glfw_helpper.h  glfw_helpper_test.cxx  guard.h  image_reader.h  log.h  mesh.h  model.h  path.h  shader.h  texture.h  trackball.h  win_main.h
coordinates/: CMakeLists.txt  coordinates_fs.glsl  coordinates_vs.glsl  main.cpp
dependency/: CMakeLists.txt
frame_buffer/: CMakeLists.txt  frame_buffer_fs.glsl  frame_buffer_fs.glsl.h  frame_buffer_screen.fs  frame_buffer_screen_fs.glsl.h  frame_buffer_screen_vs.glsl  frame_buffer_screen_vs.glsl.h  frame_buffer_vs.glsl  frame_buffer_vs.glsl.h  main.cpp
get_started_with_glfw/: CMakeLists.txt  main.cpp
hello_opengl/: CMakeLists.txt  main.cpp
hello_opengl_with_glew/: CMakeLists.txt  main.cpp
hello_rectangle/: CMakeLists.txt  fs.glsl.h  main.cpp  vs.glsl  vs.glsl.h
hello_triangle/: CMakeLists.txt  main.cpp  vs.glsl  vs.glsl.h
lighting_map/: CMakeLists.txt  lighting_map_fs.glsl  lighting_map_fs.glsl.h  lighting_map_light_fs.glsl.h  lighting_map_light_vs.glsl.h  lighting_map_vs.glsl  lighting_map_vs.glsl.h  main.cpp
log/: log.h
materials/: CMakeLists.txt  main.cpp  materials_fs.glsl  materials_fs.glsl.h  materials_light_fs.glsl.h  materials_light_vs.glsl.h  materials_vs.glsl.h
model/: CMakeLists.txt  main.cpp  model_fs.glsl  model_fs.glsl.h  model_vs.glsl  model_vs.glsl.h
shaders/: CMakeLists.txt  main.cpp  shaders_fs.glsl  shaders_fs.glsl.h  shaders_vs.glsl  shaders_vs.glsl.h
text_rendering/: CMakeLists.txt  fragment.fs.h  main.cpp  vertex.vs.h
textures/: CMakeLists.txt  main.cpp  textures_fs.glsl  textures_vs.glsl.h
transformations/: CMakeLists.txt  main.cpp  transformations_fs.glsl.h  transformations_vs.glsl  transformations_vs.glsl.h
vao_and_shader/: CMakeLists.txt  fs.glsl  fs.glsl.h  main.cpp  vs.glsl  vs.glsl.h
